overflow x solved

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     justify-content: space-evenly;
     align-items: center;
     gap: 15px;
-    width: 100vw;
+    width: 100%;
 }
 .logo{
     display: flex;
@@ -102,12 +102,12 @@
 .catagories{
     background-color:#1f1f1f;
     gap: 1px;
-    margin: 25px;
     border-radius: 15px;
     padding: 15px;
+    width: 100%;
 }
 .catHeading{
-    margin: 20px;
+    margin: 25px;
 }
 .boxWrap{
     display: flex;
